Lesson 8: change name classes, catalogs, fix bugs
