# backend_fefu_3_6/app/Http/Controllers/Web/ProductWebController.php
@@ -3,16 +3,20 @@
 namespace App\Http\Controllers\Web;
 use App\Http\Controllers\Controller;
 use App\Models\Product;
-use Illuminate\Http\Request;
+use Exception;
 
 class ProductWebController extends Controller
 {
     public function index(string $slug)
     {
-        $product = Product::query()
-            ->with('productCategory','sortedAttributeValues.productAttribute')
-            ->where('slug', $slug)
-            ->first();
+        try {
+            $product = Product::query()
+                ->with('productCategory','sortedAttributeValues.productAttribute')
+                ->where('slug', $slug)
+                ->first();
+        } catch (Exception $exception) {
+            abort(422, $exception->getMessage());
+        }
 
         if($product === null){
             abort(404);
