# backend_fefu_3_6/app/Http/Resources/Catalog/ShortInfoProductResource.php
@@ -1,13 +1,12 @@
 <?php
 
-namespace App\Http\Resources;
-use App\Models\News;
-use Illuminate\Http\Resources\Json\JsonResource;
+namespace App\Http\Resources\Catalog;
 
+use Illuminate\Http\Resources\Json\JsonResource;
 /**
- * @mixin Categories
+ * @mixin Product
  */
-class CategoriesResources extends JsonResource
+class ShortInfoProductResource extends JsonResource
 {
 
     /**
@@ -22,7 +21,7 @@ class CategoriesResources extends JsonResource
             'id' => $this->id,
             'name' => $this->name,
             'slug' => $this->slug,
-            'parent_id' => $this->parent_id,
+            'price' => $this->price,
         ];
     }
 }
