# backend_fefu_3_6/app/OpenApi/Schemas/CategorySchema.php
@@ -11,19 +11,19 @@ use GoldSpecDigital\ObjectOrientedOAS\Objects\Schema;
 use Vyuldashev\LaravelOpenApi\Contracts\Reusable;
 use Vyuldashev\LaravelOpenApi\Factories\SchemaFactory;
 
-class ProductsCatalogSchema extends SchemaFactory implements Reusable
+class CategorySchema extends SchemaFactory implements Reusable
 {
     /**
      * @return AllOf|OneOf|AnyOf|Not|Schema
      */
     public function build(): SchemaContract
     {
-        return Schema::object('Product')
+        return Schema::object('Categories')
             ->properties(
                 Schema::string('id')->default(null),
                 Schema::string('name')->default(null),
                 Schema::string('slug')->default(null),
-                Schema::string('price')->default(null),
+                Schema::string('parent_id')->default(null),
             );
     }
 }
